2003-08-02 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	first pass at new big picture theme stuff
	